# rust-axum-tutorial

./: .gitignore  Cargo.toml  README.md
src/: error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
