[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tower-http = { version="0.4.1", features = ["fs"] }
tower-cookies = "0.9.0"

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.4"
